# lmp

./: .gitignore  DevDiary.md  Makefile  README.md  app.py  index.html  main.js  package-lock.json  package.json  requirements.txt  webpack.config.js
classes/: Application.py  log.py
classes/models/: MusicDir.py
classes/services/: Db.py  MPlayer.py  Manager.py  ScanDirTask.py
classes/ui/: LogWin.py  Main.py  MainWindow.py
classes/ui/components/: LoadImage.py  PlayerWidget.py
qt-project/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  playbar.cpp  playbar.h  playbar.ui  testdialog.h  testdialog.ui
resources/: icons.qrc
src/: Main.vue  app.js  app.scss
src/components/: Player.vue
src/home/: View.vue
src/main-menu/: View.vue
src/routes/: router.js
src/services/: PlayerService.js  ipcRegisterMainOperation.js  ipcRendererCall.js
src/store/: Store.js  actualSong.js  mutation-types.js
src/views/: Main.vue
src/views/home/: View.vue
src/views/main-menu/: View.vue
src/views/settings/: View.vue
ui/: MainWindow.ui  PlayerWidget.ui
